--- a/app/src/main/res/layout/fragment_personal_info.xml
+++ b/app/src/main/res/layout/fragment_personal_info.xml
@@ -62,7 +62,7 @@
                 android:layout_marginTop="28dp"
                 android:layout_marginEnd="24dp"
                 android:ems="10"
-                android:hint="@string/jenis_kelamin"
+                android:hint="@string/gender"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toEndOf="parent"
