--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,4 +35,10 @@
         android:name="com.developer.kulitku.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
+
+    <fragment
+        android:id="@+id/navigation_gallery"
+        android:name="com.developer.kulitku.ui.scan.GalleryFragment"
+        android:label="@string/title_profile"
+        tools:layout="@layout/fragment_gallery" />
 </navigation>
