refactor: update ui scan result layout

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.register.PersonalInfoFragment">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textview_app_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -57,7 +57,7 @@
         app:cardCornerRadius="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        app:layout_constraintTop_toBottomOf="@+id/textview_app_bar">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tablayout_register"
