--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="colorLightBlue">#C1E4F0</color>
     <color name="colorGolden">#F7C050</color>
     <color name="colorDesertStorm">#EDE9E3</color>
+    <color name="colorDerby">#F3E2C7</color>
 </resources>
