--- a/app/src/main/res/layout/fragment_zero_intro.xml
+++ b/app/src/main/res/layout/fragment_zero_intro.xml
@@ -13,7 +13,7 @@
         android:id="@+id/imageView8"
         android:layout_width="247dp"
         android:layout_height="282dp"
-        android:src="@drawable/cream"
+        android:src="@drawable/zero"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/desc_splash_two"
+        android:text="@string/welcome"
         android:fontFamily="@font/inter_medium"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView8"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/inter_bold"
-        android:text="@string/skincare"
+        android:text="@string/skinpals"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="@+id/textView5"
