feat: register and login

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FDF6F0"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.auth.AuthFragment">
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnSIgnUp"
+        android:id="@+id/btnSignUp"
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:layout_marginStart="32dp"
@@ -19,7 +19,6 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />
 
@@ -36,10 +35,10 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_desc" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textview_desc"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
