--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#F3E2C7"
     android:id="@+id/frame_register"
-    tools:context=".ui.register.PersonalInfoFragment">
+    tools:context=".ui.register.StepOneFragment">
 
     <TextView
         android:id="@+id/textview_app_bar"
