feat: click register

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -163,6 +163,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/textview_signup"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/sign_up_here"
