Slicing Kulitku Fragment

--- a/app/src/main/res/layout/fragment_home_base.xml
+++ b/app/src/main/res/layout/fragment_home_base.xml
@@ -192,7 +192,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView10"
-            tools:listitem="@layout/item_kulitku" />
+            tools:listitem="@layout/item_kulitku_home" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvBestie"
