--- a/app/src/main/res/layout/fragment_kulitku.xml
+++ b/app/src/main/res/layout/fragment_kulitku.xml
@@ -47,6 +47,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvKulitku"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
