Create adapter for kubuku Recyclerview

--- a/app/src/main/res/layout/item_kubuku.xml
+++ b/app/src/main/res/layout/item_kubuku.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent">
 
                     <ImageView
-                        android:id="@+id/imageView16"
+                        android:id="@+id/ivImageKubuku"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,15 +42,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="@font/inter_bold"
                 android:text="@string/title_disease"
                 android:textSize="15sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView16"
+                app:layout_constraintStart_toEndOf="@+id/ivImageKubuku"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/tvDescDisease"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
