--- a/app/src/main/res/layout/fragment_kubuku.xml
+++ b/app/src/main/res/layout/fragment_kubuku.xml
@@ -75,6 +75,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvKubuku"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
