Slicing bottom sheet profile

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,5 @@
     <color name="colorDesertStorm">#EDE9E3</color>
     <color name="colorDerby">#F3E2C7</color>
     <color name="colorStarkWhite">#CAC5C0</color>
+    <color name="colorGulGrey">#9CADB3</color>
 </resources>
