--- a/app/src/main/res/layout/fragment_home_base.xml
+++ b/app/src/main/res/layout/fragment_home_base.xml
@@ -61,8 +61,8 @@
             android:textColor="#A6000000"
             android:textSize="22sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/textView11"
-            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+            app:layout_constraintStart_toStartOf="@+id/textview_date"
+            app:layout_constraintTop_toBottomOf="@+id/textview_date" />
 
         <TextView
             android:id="@+id/textview_username"
@@ -76,7 +76,7 @@
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/textview_halo"
-            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+            app:layout_constraintTop_toBottomOf="@+id/textview_date" />
 
         <TextView
             android:id="@+id/textview_mark"
@@ -89,10 +89,10 @@
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/textview_username"
-            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+            app:layout_constraintTop_toBottomOf="@+id/textview_date" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/textview_date"
             android:layout_width="0dp"
             android:textSize="14sp"
             android:textColor="@color/colorDarkGrey"
@@ -111,7 +111,7 @@
             app:cardCornerRadius="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/textview_halo"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView11" >
+            app:layout_constraintTop_toTopOf="@+id/textview_date" >
 
             <ImageView
                 android:layout_width="match_parent"
