--- a/app/src/main/res/layout/fragment_home_base.xml
+++ b/app/src/main/res/layout/fragment_home_base.xml
@@ -153,7 +153,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/btnMoreKubaca"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
@@ -183,7 +183,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="22dp"
             android:fontFamily="@font/inter_bold"
-            android:text="@string/kulitku"
+            android:text="@string/history"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rvKubaca" />
