--- a/app/src/main/res/layout/fragment_kulitku.xml
+++ b/app/src/main/res/layout/fragment_kulitku.xml
@@ -78,7 +78,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="44dp"
         android:fontFamily="@font/inter_bold"
-        android:text="@string/on_development"
+        android:text="@string/coming_soon"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
